# MSRF

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  codegen_command  configuration.yaml  docker-compose.sample.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  todo
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ghcr.yml
assets/: index.html  manifest.json
custom_logging/: __init__.py  logger.py
database/: __init__.py  database_access.py  database_config.py  database_operations.py
error_reporting/: __init__.py  error_report.py  json_encoder.py
gui/: __init__.py  accounts_table.py  add_account_dialog.py  error_counter.py  log_display.py  progress.py  title_bar.py  toolbar.py
pb_migrations/: 1671224588_updated_users.js  1671224802_created_microsoft_account.js  1671225109_updated_microsoft_account.js  1671225141_updated_microsoft_account.js  1671226870_updated_microsoft_account.js  1671226972_updated_microsoft_account.js
scripts/: archive.py  build.bat  build.py  sort_imports.py  startup_scripts.py
static/css/: styles.css
static/js/: index.js
templates/: index.html
tests/: test_dashboard_data.py
util/: __init__.py  deprecate.py
util/browser/: bingSearch.py  bingSearches.py  browser_setup.py  checkBingLogin.py  completeDailySet.py  completeDailySetQuiz.py  completeDailySetSearch.py  completeDailySetSurvey.py  completeDailySetThisOrThat.py  completeDailySetVariableActivity.py  completeMorePromotionABC.py  completeMorePromotionQuiz.py  completeMorePromotionSearch.py  completeMorePromotionThisOrThat.py  (+17 more)
(+9 files in other folders)
