[tool.poetry]
name = "msrf-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "msrf_dev"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rich = "^13.1.0"
flet = "^0.3.2"
pyyaml = "^6.0"
isort = "^5.11.4"
python-dotenv = "^0.21.0"
pytest = "^7.2.1"
pytest-check = "^2.1.2"
selenium = "^4.7.2"
pydantic = "^1.10.4"
pydantic-yaml = "^0.9.0"
pygithub = "^1.57"
apscheduler = "^3.9.1.post1"
autoflake = "^2.0.0"
pyinstaller = "5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
msrf = "scripts/startup_scripts:flet_normal_python_start"